Add text to link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>LV1</title>
 </head>
 <body>
-    <a href="LV1/index.html"></a>
+    <a href="LV1/index.html">LV1</a>
 
 </body>
 </html>
