Update weather cards

--- a/LV1/index.html
+++ b/LV1/index.html
@@ -31,6 +31,31 @@
 <main>
     <div class="container">
         <div class="row">
+            <div class="col-lg-3">
+                <aside>
+                    <h2>Moji gradovi</h2>
+                    <div class="weather-card rainy">
+                        <div class="temp-info">
+                            <p class="location-name">Osijek</p>
+                            <p class="location-temperature">14°</p>
+                        </div>
+                        <div class="weather-info">
+                            <img src="assets/img/amcharts_weather_icons/static/rainy-7.svg" alt="rainy-weather-icon">
+                            <p class="location-weather-type">Cloudy</p>
+                        </div>
+                    </div>
+                    <div class="weather-card sunny">
+                        <div class="temp-info">
+                            <p class="location-name">Zagreb</p>
+                            <p class="location-temperature">14°</p>
+                        </div>
+                        <div class="weather-info">
+                            <img src="assets/img/amcharts_weather_icons/static/day.svg" alt="sunny-weather-icon">
+                            <p class="location-weather-type">Cloudy</p>
+                        </div>
+                    </div>
+                </aside>
+            </div>
             <div class="col-lg-9">
                 <div class="vrijeme-info">
                     <h2>Vremenski Podaci</h2>
@@ -285,17 +310,6 @@
                     <h2>Najnovije vijesti</h2>
                     <p>Ovdje se nalazi članak s važnim informacijama.</p>
                 </article>
-            </div>
-            <div class="col-lg-3">
-                <aside>
-                    <h2>Moji gradovi</h2>
-                    <div class="weather-card sunny">
-                        <img src="assets/img/amcharts_weather_icons/static/day.svg" alt="sunny-weather-icon">
-                    </div>
-                    <div class="weather-card rainy">
-                        <img src="assets/img/amcharts_weather_icons/static/rainy-7.svg" alt="rainy-weather-icon">
-                    </div>
-                </aside>
             </div>
         </div>
     </div>
