Finish index style

--- a/LV1/index.html
+++ b/LV1/index.html
@@ -40,18 +40,18 @@
                             <p class="location-temperature">14°</p>
                         </div>
                         <div class="weather-info">
+                            <p class="location-weather-type">Rain</p>
                             <img src="assets/img/amcharts_weather_icons/static/rainy-7.svg" alt="rainy-weather-icon">
-                            <p class="location-weather-type">Cloudy</p>
                         </div>
                     </div>
                     <div class="weather-card sunny">
                         <div class="temp-info">
                             <p class="location-name">Zagreb</p>
-                            <p class="location-temperature">14°</p>
+                            <p class="location-temperature">15°</p>
                         </div>
                         <div class="weather-info">
+                            <p class="location-weather-type">Sunny</p>
                             <img src="assets/img/amcharts_weather_icons/static/day.svg" alt="sunny-weather-icon">
-                            <p class="location-weather-type">Cloudy</p>
                         </div>
                     </div>
                 </aside>
