Add graph to Statistika

--- a/LV1/index.html
+++ b/LV1/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--dodati meta tag bitan za stranicu-->
     <meta title="LV1 Početna stranica za kolegij Web programiranje na FERIT-u">
 
     <link rel="stylesheet" href="style.css">
@@ -302,7 +301,7 @@
                         </table>
                     </div>
                 </div>
-                <section> <!-- dodati neke od obilježja za ARIA-->
+                <section>
                     <h2>Ovo je glavna sekcija</h2>
                     <p>HTML5 omogućava semantičku strukturu koja poboljšava pristupaćnost i SEO.</p>
                 </section>
