Update grafikon.html seo

--- a/LV1/grafikon.html
+++ b/LV1/grafikon.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--dodati meta tag bitan za stranicu-->
-    <meta title="LV1 Početna stranica za kolegij Web programiranje na FERIT-u">
+    <meta title="LV1 Stranica grafikona za kolegij Web programiranje na FERIT-u">
 
     <link rel="stylesheet" href="style.css">
-    <title>Početna | LV1</title>
+    <title>Statistika | LV1</title>
 </head>
 <body>
 <header>
