--- a/LV1/slike.html
+++ b/LV1/slike.html
@@ -1,133 +1,168 @@
-<!--DODATI ŠTO NEDOSTAJE!-->
+<!DOCTYPE html>
+<html lang="hr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta title="LV1 Stranica galerije za kolegij Web programiranje na FERIT-u">
 
-<!-- Slike u galeriji -->
+    <link rel="stylesheet" href="style.css">
+    <title>Galerija | LV1</title>
+</head>
+<body>
+<header>
+    <div class="container">
+        <h1>Web Programiranje @FERIT</h1>
+    </div>
+</header>
+<nav>
+    <div class="container">
+        <div class="brand">
+            <a href="index.html">LV1</a>
+        </div>
+        <div class="links">
+            <a href="index.html">Početna</a>
+            <a href="grafikon.html">Statistika</a>
+            <a href="slike.html">Galerija</a>
+        </div>
+    </div>
+</nav>
 
-
-
-
-
-<section class="galerija">
-    <h1>Galerija slika</h1>
-
-    <!-- putanja (href) u tagu a je drugačija kad se koristi lightbox od onoga kada želimo da se
-                     otvori u novom tabu -->
-
-
-    <figure class="galerija_slika">
-        <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=1" title="1.jpg">
-            <img src="https://unsplash.it/300/200?random=1" alt="Slika 1">
-        </a>
-        <figcaption>Slika 1</figcaption>
-    </figure>
-
-    <figure class="galerija_slika">
-        <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=2" title="2.jpg">
-            <img src="https://unsplash.it/300/200?random=2" alt="Slika 2">
-        </a>
-        <figcaption>Slika 2</figcaption>
-    </figure>
-
-    <figure class="galerija_slika">
-        <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=3" title="3.jpg">
-            <img src="https://unsplash.it/300/200?random=3" alt="Slika 3">
-        </a>
-        <figcaption>Slika 3</figcaption>
-    </figure>
-
-    <figure class="galerija_slika">
-        <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=4" title="4.jpg">
-            <img src="https://unsplash.it/300/200?random=4" alt="Slika 4">
-        </a>
-        <figcaption>Slika 4</figcaption>
-    </figure>
-
-    <figure class="galerija_slika">
-        <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=5" title="5.jpg">
-            <img src="https://unsplash.it/300/200?random=5" alt="Slika 5">
-        </a>
-        <figcaption>Slika 5</figcaption>
-    </figure>
-
-    <figure class="galerija_slika">
-        <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=6" title="6.jpg">
-            <img src="https://unsplash.it/300/200?random=6" alt="Slika 6">
-        </a>
-        <figcaption>Slika 6</figcaption>
-    </figure>
-
-    <figure class="galerija_slika">
-        <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=7" title="7.jpg">
-            <img src="https://unsplash.it/300/200?random=7" alt="Slika 7">
-        </a>
-        <figcaption>Slika 7</figcaption>
-    </figure>
-
-    <figure class="galerija_slika">
-        <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=8" title="8.jpg">
-            <img src="https://unsplash.it/300/200?random=8" alt="Slika 8">
-        </a>
-        <figcaption>Slika 8</figcaption>
-    </figure>
-
-    <figure class="galerija_slika">
-        <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=9" title="9.jpg">
-            <img src="https://unsplash.it/300/200?random=9" alt="Slika 9">
-        </a>
-        <figcaption>Slika 9</figcaption>
-    </figure>
-
-    <figure class="galerija_slika">
-        <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=10" title="10.jpg">
-            <img src="https://unsplash.it/300/200?random=10" alt="Slika 10">
-        </a>
-        <figcaption>Slika 10</figcaption>
-    </figure>
-
-    <figure class="galerija_slika">
-        <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=11" title="11.jpg">
-            <img src="https://unsplash.it/300/200?random=11" alt="Slika 11">
-        </a>
-        <figcaption>Slika 11</figcaption>
-    </figure>
-
-    <figure class="galerija_slika">
-        <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=12" title="12.jpg">
-            <img src="https://unsplash.it/300/200?random=12" alt="Slika 12">
-        </a>
-        <figcaption>Slika 12</figcaption>
-    </figure>
-
-    <figure class="galerija_slika">
-        <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=13" title="13.jpg">
-            <img src="https://unsplash.it/300/200?random=13" alt="Slika 13">
-        </a>
-        <figcaption>Slika 13</figcaption>
-    </figure>
-
-    <figure class="galerija_slika">
-        <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=14" title="14.jpg">
-            <img src="https://unsplash.it/300/200?random=14" alt="Slika 14">
-        </a>
-        <figcaption>Slika 14</figcaption>
-    </figure>
-
-    <figure class="galerija_slika">
-        <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=15" title="15.jpg">
-            <img src="https://unsplash.it/300/200?random=15" alt="Slika 15">
-        </a>
-        <figcaption>Slika 15</figcaption>
-    </figure>
-
-    <figure class="galerija_slika">
-        <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=16" title="16.jpg">
-            <img src="https://unsplash.it/300/200?random=16" alt="Slika 16">
-        </a>
-        <figcaption>Slika 16</figcaption>
-    </figure>
+<main>
+    <section class="galerija">
+        <div class="container">
+            <h2>Galerija slika</h2>
 
 
+            <figure class="galerija_slika">
+                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=1" title="1.jpg">
+                    <img src="https://unsplash.it/300/200?random=1" alt="Slika 1">
+                </a>
+                <figcaption>Slika 1</figcaption>
+            </figure>
 
-</section>
+            <figure class="galerija_slika">
+                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=2" title="2.jpg">
+                    <img src="https://unsplash.it/300/200?random=2" alt="Slika 2">
+                </a>
+                <figcaption>Slika 2</figcaption>
+            </figure>
+
+            <figure class="galerija_slika">
+                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=3" title="3.jpg">
+                    <img src="https://unsplash.it/300/200?random=3" alt="Slika 3">
+                </a>
+                <figcaption>Slika 3</figcaption>
+            </figure>
+
+            <figure class="galerija_slika">
+                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=4" title="4.jpg">
+                    <img src="https://unsplash.it/300/200?random=4" alt="Slika 4">
+                </a>
+                <figcaption>Slika 4</figcaption>
+            </figure>
+
+            <figure class="galerija_slika">
+                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=5" title="5.jpg">
+                    <img src="https://unsplash.it/300/200?random=5" alt="Slika 5">
+                </a>
+                <figcaption>Slika 5</figcaption>
+            </figure>
+
+            <figure class="galerija_slika">
+                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=6" title="6.jpg">
+                    <img src="https://unsplash.it/300/200?random=6" alt="Slika 6">
+                </a>
+                <figcaption>Slika 6</figcaption>
+            </figure>
+
+            <figure class="galerija_slika">
+                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=7" title="7.jpg">
+                    <img src="https://unsplash.it/300/200?random=7" alt="Slika 7">
+                </a>
+                <figcaption>Slika 7</figcaption>
+            </figure>
+
+            <figure class="galerija_slika">
+                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=8" title="8.jpg">
+                    <img src="https://unsplash.it/300/200?random=8" alt="Slika 8">
+                </a>
+                <figcaption>Slika 8</figcaption>
+            </figure>
+
+            <figure class="galerija_slika">
+                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=9" title="9.jpg">
+                    <img src="https://unsplash.it/300/200?random=9" alt="Slika 9">
+                </a>
+                <figcaption>Slika 9</figcaption>
+            </figure>
+
+            <figure class="galerija_slika">
+                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=10" title="10.jpg">
+                    <img src="https://unsplash.it/300/200?random=10" alt="Slika 10">
+                </a>
+                <figcaption>Slika 10</figcaption>
+            </figure>
+
+            <figure class="galerija_slika">
+                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=11" title="11.jpg">
+                    <img src="https://unsplash.it/300/200?random=11" alt="Slika 11">
+                </a>
+                <figcaption>Slika 11</figcaption>
+            </figure>
+
+            <figure class="galerija_slika">
+                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=12" title="12.jpg">
+                    <img src="https://unsplash.it/300/200?random=12" alt="Slika 12">
+                </a>
+                <figcaption>Slika 12</figcaption>
+            </figure>
+
+            <figure class="galerija_slika">
+                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=13" title="13.jpg">
+                    <img src="https://unsplash.it/300/200?random=13" alt="Slika 13">
+                </a>
+                <figcaption>Slika 13</figcaption>
+            </figure>
+
+            <figure class="galerija_slika">
+                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=14" title="14.jpg">
+                    <img src="https://unsplash.it/300/200?random=14" alt="Slika 14">
+                </a>
+                <figcaption>Slika 14</figcaption>
+            </figure>
+
+            <figure class="galerija_slika">
+                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=15" title="15.jpg">
+                    <img src="https://unsplash.it/300/200?random=15" alt="Slika 15">
+                </a>
+                <figcaption>Slika 15</figcaption>
+            </figure>
+
+            <figure class="galerija_slika">
+                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=16" title="16.jpg">
+                    <img src="https://unsplash.it/300/200?random=16" alt="Slika 16">
+                </a>
+                <figcaption>Slika 16</figcaption>
+            </figure>
+        </div>
+    </section>
+</main>
+
+
+
+<footer>
+    <div class="container">
+        <p>&copy; 2025. Web Programiranje. Sva prava pridržana.</p>
+    </div>
+
+</footer>
+</body>
+</html>
+
+
+
+
+
 
 
 
