--- a/LV1/slike.html
+++ b/LV1/slike.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta title="LV1 Stranica galerije za kolegij Web programiranje na FERIT-u">
-
     <link rel="stylesheet" href="style.css">
     <title>Galerija | LV1</title>
 </head>
@@ -28,142 +27,66 @@
 </nav>
 
 <main>
-    <section class="galerija">
-        <div class="container">
-            <h2>Galerija slika</h2>
-
-
-            <figure class="galerija_slika">
-                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=1" title="1.jpg">
-                    <img src="https://unsplash.it/300/200?random=1" alt="Slika 1">
-                </a>
-                <figcaption>Slika 1</figcaption>
-            </figure>
-
-            <figure class="galerija_slika">
-                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=2" title="2.jpg">
-                    <img src="https://unsplash.it/300/200?random=2" alt="Slika 2">
-                </a>
-                <figcaption>Slika 2</figcaption>
-            </figure>
-
-            <figure class="galerija_slika">
-                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=3" title="3.jpg">
-                    <img src="https://unsplash.it/300/200?random=3" alt="Slika 3">
-                </a>
-                <figcaption>Slika 3</figcaption>
-            </figure>
-
-            <figure class="galerija_slika">
-                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=4" title="4.jpg">
-                    <img src="https://unsplash.it/300/200?random=4" alt="Slika 4">
-                </a>
-                <figcaption>Slika 4</figcaption>
-            </figure>
-
-            <figure class="galerija_slika">
-                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=5" title="5.jpg">
-                    <img src="https://unsplash.it/300/200?random=5" alt="Slika 5">
-                </a>
-                <figcaption>Slika 5</figcaption>
-            </figure>
-
-            <figure class="galerija_slika">
-                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=6" title="6.jpg">
-                    <img src="https://unsplash.it/300/200?random=6" alt="Slika 6">
-                </a>
-                <figcaption>Slika 6</figcaption>
-            </figure>
-
-            <figure class="galerija_slika">
-                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=7" title="7.jpg">
-                    <img src="https://unsplash.it/300/200?random=7" alt="Slika 7">
-                </a>
-                <figcaption>Slika 7</figcaption>
-            </figure>
-
-            <figure class="galerija_slika">
-                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=8" title="8.jpg">
-                    <img src="https://unsplash.it/300/200?random=8" alt="Slika 8">
-                </a>
-                <figcaption>Slika 8</figcaption>
-            </figure>
-
-            <figure class="galerija_slika">
-                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=9" title="9.jpg">
-                    <img src="https://unsplash.it/300/200?random=9" alt="Slika 9">
-                </a>
-                <figcaption>Slika 9</figcaption>
-            </figure>
-
-            <figure class="galerija_slika">
-                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=10" title="10.jpg">
-                    <img src="https://unsplash.it/300/200?random=10" alt="Slika 10">
-                </a>
-                <figcaption>Slika 10</figcaption>
-            </figure>
-
-            <figure class="galerija_slika">
-                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=11" title="11.jpg">
-                    <img src="https://unsplash.it/300/200?random=11" alt="Slika 11">
-                </a>
-                <figcaption>Slika 11</figcaption>
-            </figure>
-
-            <figure class="galerija_slika">
-                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=12" title="12.jpg">
-                    <img src="https://unsplash.it/300/200?random=12" alt="Slika 12">
-                </a>
-                <figcaption>Slika 12</figcaption>
-            </figure>
-
-            <figure class="galerija_slika">
-                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=13" title="13.jpg">
-                    <img src="https://unsplash.it/300/200?random=13" alt="Slika 13">
-                </a>
-                <figcaption>Slika 13</figcaption>
-            </figure>
-
-            <figure class="galerija_slika">
-                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=14" title="14.jpg">
-                    <img src="https://unsplash.it/300/200?random=14" alt="Slika 14">
-                </a>
-                <figcaption>Slika 14</figcaption>
-            </figure>
-
-            <figure class="galerija_slika">
-                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=15" title="15.jpg">
-                    <img src="https://unsplash.it/300/200?random=15" alt="Slika 15">
-                </a>
-                <figcaption>Slika 15</figcaption>
-            </figure>
-
-            <figure class="galerija_slika">
-                <a class="image-popup-vertical-fit" href="https://unsplash.it/900/?random=16" title="16.jpg">
-                    <img src="https://unsplash.it/300/200?random=16" alt="Slika 16">
-                </a>
-                <figcaption>Slika 16</figcaption>
-            </figure>
-        </div>
-    </section>
+    <div class="container">
+        <h2>Galerija slika</h2>
+        <section class="galerija">
+            <input type="checkbox" id="img1" class="img-toggle">
+            <label for="img1" class="galerija_slika">
+                <img src="https://unsplash.it/900?random=1" alt="Slika 1">
+            </label>
+            <input type="checkbox" id="img2" class="img-toggle">
+            <label for="img2" class="galerija_slika">
+                <img src="https://unsplash.it/900?random=2" alt="Slika 2">
+            </label>
+            <input type="checkbox" id="img3" class="img-toggle">
+            <label for="img3" class="galerija_slika">
+                <img src="https://unsplash.it/900?random=3" alt="Slika 3">
+            </label>
+            <input type="checkbox" id="img4" class="img-toggle">
+            <label for="img4" class="galerija_slika">
+                <img src="https://unsplash.it/900?random=4" alt="Slika 4">
+            </label>
+            <input type="checkbox" id="img5" class="img-toggle">
+            <label for="img5" class="galerija_slika">
+                <img src="https://unsplash.it/900?random=5" alt="Slika 5">
+            </label>
+            <input type="checkbox" id="img6" class="img-toggle">
+            <label for="img6" class="galerija_slika">
+                <img src="https://unsplash.it/900?random=6" alt="Slika 6">
+            </label>
+            <input type="checkbox" id="img7" class="img-toggle">
+            <label for="img7" class="galerija_slika">
+                <img src="https://unsplash.it/900?random=7" alt="Slika 7">
+            </label>
+            <input type="checkbox" id="img8" class="img-toggle">
+            <label for="img8" class="galerija_slika">
+                <img src="https://unsplash.it/900?random=8" alt="Slika 8">
+            </label>
+            <input type="checkbox" id="img9" class="img-toggle">
+            <label for="img9" class="galerija_slika">
+                <img src="https://unsplash.it/900?random=9" alt="Slika 9">
+            </label>
+            <input type="checkbox" id="img10" class="img-toggle">
+            <label for="img10" class="galerija_slika">
+                <img src="https://unsplash.it/900?random=10" alt="Slika 10">
+            </label>
+            <input type="checkbox" id="img11" class="img-toggle">
+            <label for="img11" class="galerija_slika">
+                <img src="https://unsplash.it/900?random=11" alt="Slika 11">
+            </label>
+            <input type="checkbox" id="img12" class="img-toggle">
+            <label for="img12" class="galerija_slika">
+                <img src="https://unsplash.it/900?random=12" alt="Slika 12">
+            </label>
+        </section>
+    </div>
 </main>
-
-
 
 <footer>
     <div class="container">
         <p>&copy; 2025. Web Programiranje. Sva prava pridržana.</p>
     </div>
-
 </footer>
+
 </body>
 </html>
-
-
-
-
-
-
-
-
-
