--- a/LV1/slike.html
+++ b/LV1/slike.html
@@ -32,51 +32,51 @@
         <section class="galerija">
             <input type="checkbox" id="img1" class="img-toggle">
             <label for="img1" class="galerija_slika">
-                <img src="https://unsplash.it/900?random=1" alt="Slika 1">
+                <img loading="lazy" src="https://unsplash.it/900?random=1" alt="Slika 1">
             </label>
             <input type="checkbox" id="img2" class="img-toggle">
             <label for="img2" class="galerija_slika">
-                <img src="https://unsplash.it/900?random=2" alt="Slika 2">
+                <img loading="lazy" src="https://unsplash.it/900?random=2" alt="Slika 2">
             </label>
             <input type="checkbox" id="img3" class="img-toggle">
             <label for="img3" class="galerija_slika">
-                <img src="https://unsplash.it/900?random=3" alt="Slika 3">
+                <img loading="lazy" src="https://unsplash.it/900?random=3" alt="Slika 3">
             </label>
             <input type="checkbox" id="img4" class="img-toggle">
             <label for="img4" class="galerija_slika">
-                <img src="https://unsplash.it/900?random=4" alt="Slika 4">
+                <img loading="lazy" src="https://unsplash.it/900?random=4" alt="Slika 4">
             </label>
             <input type="checkbox" id="img5" class="img-toggle">
             <label for="img5" class="galerija_slika">
-                <img src="https://unsplash.it/900?random=5" alt="Slika 5">
+                <img loading="lazy" src="https://unsplash.it/900?random=5" alt="Slika 5">
             </label>
             <input type="checkbox" id="img6" class="img-toggle">
             <label for="img6" class="galerija_slika">
-                <img src="https://unsplash.it/900?random=6" alt="Slika 6">
+                <img loading="lazy" src="https://unsplash.it/900?random=6" alt="Slika 6">
             </label>
             <input type="checkbox" id="img7" class="img-toggle">
             <label for="img7" class="galerija_slika">
-                <img src="https://unsplash.it/900?random=7" alt="Slika 7">
+                <img loading="lazy" src="https://unsplash.it/900?random=7" alt="Slika 7">
             </label>
             <input type="checkbox" id="img8" class="img-toggle">
             <label for="img8" class="galerija_slika">
-                <img src="https://unsplash.it/900?random=8" alt="Slika 8">
+                <img loading="lazy" src="https://unsplash.it/900?random=8" alt="Slika 8">
             </label>
             <input type="checkbox" id="img9" class="img-toggle">
             <label for="img9" class="galerija_slika">
-                <img src="https://unsplash.it/900?random=9" alt="Slika 9">
+                <img loading="lazy" src="https://unsplash.it/900?random=9" alt="Slika 9">
             </label>
             <input type="checkbox" id="img10" class="img-toggle">
             <label for="img10" class="galerija_slika">
-                <img src="https://unsplash.it/900?random=10" alt="Slika 10">
+                <img loading="lazy" src="https://unsplash.it/900?random=10" alt="Slika 10">
             </label>
             <input type="checkbox" id="img11" class="img-toggle">
             <label for="img11" class="galerija_slika">
-                <img src="https://unsplash.it/900?random=11" alt="Slika 11">
+                <img loading="lazy" src="https://unsplash.it/900?random=11" alt="Slika 11">
             </label>
             <input type="checkbox" id="img12" class="img-toggle">
             <label for="img12" class="galerija_slika">
-                <img src="https://unsplash.it/900?random=12" alt="Slika 12">
+                <img loading="lazy" src="https://unsplash.it/900?random=12" alt="Slika 12">
             </label>
         </section>
     </div>
