Add package.json to LV2

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="hr">
 <head>
     <meta charset="UTF-8">
-    <title>LV1</title>
+    <title>Web programming</title>
 </head>
 <body>
     <a href="LV1/index.html">LV1</a>
+    <a href="LV2/index.html">LV2</a>
 
 </body>
 </html>
